# HK4ERSAPatch

./: CMakeLists.txt  README.md
include/: Marshal.hpp  ModuleManager.hpp  Util.h  ccp_blocker.hpp  common.h  dllmain.h  http.hpp  interceptor.hpp  misc.hpp  sdk_public_key.h  security.hpp  server_public_key.h
include/lib/: minhook.x64.lib
src/: Util.cpp  ccp_blocker.cpp  dllmain.cpp  misc.cpp  security.cpp
